# Tensor-Array-Python

./: .gitignore  .gitmodules  CMakeLists.txt  CPythonTensor.sln  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml
CPythonTensor/: CPythonTensor.vcxproj  CPythonTensor.vcxproj.filters  module.c  module.h  py_tensor.cpp  tensor_bind.cc
PythonTensorTesting/: PythonTensorTesting.pyproj  main.py
PythonTensorTesting/PyTensorArray/: __init__.py  tensor.py
cpp/: tensor_bind.cc
include/: tensor_bind.cc
scripts/build-env/: manylinux.sh
src/: main.py
src/TensorArray/layers/: Linear.py
src/TensorArray/util/: Layer.py  Parameter.py
src/tensor_array/: activation.py
src/tensor_array/_core/: tensor_bind.cc
src/tensor_array/core/: __init__.py  constants.py  datatypes.py  operator.py  tensor.py
src/tensor_array/layers/: __init__.py  layer.py  linear.py  parameter.py
src/tensor_array/layers/attention/: __init__.py  attention.py  transformer.py
src/tensor_array/layers/normalization/: __init__.py  normalization.py
src/tensor_array/layers/util/: __init__.py  activation.py  linear.py  sequential.py
src/tensor_array/util/: __init__.py  layer.py  parameter.py
tests/: test.py
