[build-system]
requires = [
  "setuptools>=42",
  "ninja",
  "cmake>=3.18,<3.29"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
xbuild-tools = ["cmake", "ninja"]

[tool.cibuildwheel.environment]
cuda = "12.9"
temp = "/tmp/cuda-temp"

[tool.cibuildwheel.linux]
before-all = [
  "chmod +x tensor-array-repo/Tensor-Array/scripts/actions/install-cuda-rhel.sh", 
  "dnf remove gcc-toolset-14\*",
  "dnf -y install redhat-lsb-core wget gcc-toolset-12",
  "scl enable gcc-toolset-N bash",
  ". tensor-array-repo/Tensor-Array/scripts/actions/install-cuda-rhel.sh"
]
xbuild-tools = ["cmake", "ninja"]

[tool.cibuildwheel.linux.environment]
CUDA_PATH = "/usr/local/cuda-${cuda}"
PATH = "${PATH}:${CUDA_PATH}/bin"
LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${CUDA_PATH}/lib:${CUDA_PATH}/lib64"
