[build-system]
requires = [
  "setuptools>=42",
  "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = [
  "pp*",
  "*-musllinux*",
]
# manylinux-x86_64-image = "manylinux2014"
# manylinux-i686-image = "manylinux2014"
# manylinux-pypy_x86_64-image = "manylinux2014"
# manylinux-aarch64-image = "manylinux2014"
# manylinux-ppc64le-image = "manylinux2014"
# manylinux-s390x-image = "manylinux2014"
# musllinux_x86_64-image = "musllinux_1_1"
# musllinux_i686-image = "musllinux_1_1"
# musllinux_aarch64-image = "musllinux_1_1"
# musllinux-ppc64le-image = "musllinux_1_1"
# musllinux-s390x-image = "musllinux_1_1"
# musllinux-armv7l-image = "musllinux_1_1"

[tool.cibuildwheel.linux]
before-all = [
  "chmod +x scripts/build-env/manylinux.sh",
  "scripts/build-env/manylinux.sh"
]

[tool.cibuildwheel.linux.environment]
cuda = "12.4"
temp = "/tmp/cuda-temp"
CUDA_PATH = "/usr/local/cuda-${cuda}"
PATH = "${PATH}:${CUDA_PATH}/bin"
LD_LIBRARY_PATH = "${LD_LIBRARY_PATH}:${CUDA_PATH}/lib:${CUDA_PATH}/lib64"
CMAKE_CUDA_COMPILER="${CUDA_PATH}/bin/nvcc)"
